# Amazon_challenge_launch

./: CMakeLists.txt  README.md  package.xml
launch/: shelf_calibration.launch  test_bt_1.launch  test_bt_grasping.launch  test_bt_random.launch
scripts/: publish_grasp_failure
